# smvp-toolkit

./: .gitignore  CMakeLists.txt  README.md  main-cli.c  main-gui.c  main.c  mmio-readtest.c  mmio-writetest.c  smvp-csr_output_1612749422.txt  smvp-csr_output_1614464378.txt  smvp-toolbox_report_CSR_1615156942.txt  smvp-toolbox_report_CSR_1615166467.txt  smvp-toolbox_report_TJDS_1615177376.txt  smvp-toolbox_report_TJDS_1615178989.txt  smvp-toolbox_report_TJDS_1615179011.txt
glade/: smvp-tbx-main.glade  smvp-tbx-main.glade~
glade-devel/: smvp-tbx-mainwindow.glade  smvp-tbx-mainwindow.glade~
mmio/: CMakeLists.txt  mmio.c
output-test/: smvp-toolbox_report_CSR_1615284655.txt  smvp-toolbox_report_CSR_1615284663.txt  smvp-toolbox_report_CSR_1615284671.txt  smvp-toolbox_report_CSR_1615284685.txt  smvp-toolbox_report_CSR_1615284695.txt  smvp-toolbox_report_TJDS_1615284655.txt  smvp-toolbox_report_TJDS_1615284665.txt  smvp-toolbox_report_TJDS_1615284679.txt  smvp-toolbox_report_TJDS_1615284688.txt  smvp-toolbox_report_TJDS_1615284695.txt
popt-examples/: popt_example.c  popt_example_2.c
sample-data/: pdp08-pg4.mtx  pwt.mtx
smvp-algs/: CMakeLists.txt  smvp-algs.c  smvp-algs.h  smvp-csr.c  smvp-csr.h  smvp-tjds.h
